# DoubleThink

./: LICENSE  README.md  pyproject.toml  setup.cfg  solution.md
doublethink/: cli.py  output_rich.py  tui.py
linksentry/: __init__.py  cli.py  html_analyzer.py  output_rich.py  reporting.py  rules.py  url_analyzer.py
rules/: weights.yml
samples/: homograph_url.txt  phish_login.html  typosquat_url.txt
tests/: test_html_analyzer.py  test_url_analyzer.py
webapp/: __init__.py  api.py  dashboard.py
