[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["rich>=13.0.0", "pyfiglet>=0.8", "textual>=0.38.0"]
name = "doublethink"
version = "0.1.0"
description = "DoubleThink - simple URL & HTML analyzer"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["samples*", "rules*", "tests*"]

[project.scripts]
linksentry = "doublethink.cli:main"
doublethink = "doublethink.cli:main"
