cat > setup.cfg <<'EOF'
[metadata]
name = linksentry
version = 0.1.0
description = LinkSentry minimal package
license = MIT

[options]
# Explicitly ask setuptools to find packages but exclude non-package folders
packages = find:
include_package_data = True

[options.packages.find]
where = .
exclude =
    samples
    rules
    tests
EOF
